新增Activity基类，适配Viewbinding和DataBinding 将现有代码适配ViewBinding和DataBinding

--- a/app/src/main/res/layout/activity_data_binding.xml
+++ b/app/src/main/res/layout/activity_data_binding.xml
@@ -16,7 +16,9 @@
         android:orientation="vertical"
         tools:context=".ui.activity.DataBindingActivity">
 
-        <include layout="@layout/toolbar" />
+        <include
+            android:id="@+id/layout_toolbar"
+            layout="@layout/toolbar" />
 
 
         <androidx.appcompat.widget.AppCompatTextView
