--- a/app/src/main/res/layout/activity_flex_box.xml
+++ b/app/src/main/res/layout/activity_flex_box.xml
@@ -6,7 +6,9 @@
     android:orientation="vertical"
     tools:context=".ui.activity.FlexBoxActivity">
 
-    <include layout="@layout/toolbar" />
+    <include
+        android:id="@+id/layout_toolbar"
+        layout="@layout/toolbar" />
 
 
     <androidx.recyclerview.widget.RecyclerView
