--- a/app/src/main/res/layout/activity_view_binding.xml
+++ b/app/src/main/res/layout/activity_view_binding.xml
@@ -9,7 +9,7 @@
     <include layout="@layout/toolbar" android:id="@+id/layout_toolbar"/>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn"
+        android:id="@+id/btn_click"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="click" />
