--- a/app/src/main/res/layout/activity_coroutines.xml
+++ b/app/src/main/res/layout/activity_coroutines.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.activity.CoroutinesActivity">
 
 
-    <include layout="@layout/toolbar" />
+    <include layout="@layout/toolbar" android:id="@+id/layout_toolbar" />
 
 
     <androidx.appcompat.widget.AppCompatTextView
