--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.activity.MainActivity">
 
 
-    <include layout="@layout/appbar_main" />
+    <include layout="@layout/appbar_main" android:id="@+id/layout_main"/>
 
 
     <com.google.android.material.navigation.NavigationView
