--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="@dimen/dp_16"
+        android:contentDescription="@string/add"
         android:src="@drawable/ic_add"
         android:tint="@color/white" />
 
