--- a/app/src/main/res/layout/activity_view_pager2.xml
+++ b/app/src/main/res/layout/activity_view_pager2.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.activity.ViewPager2Activity">
 
 
-    <include layout="@layout/toolbar" />
+    <include layout="@layout/toolbar" android:id="@+id/layout_toolbar" />
 
 
     <FrameLayout
