--- a/app/src/main/res/layout/activity_view_pager2.xml
+++ b/app/src/main/res/layout/activity_view_pager2.xml
@@ -7,9 +7,9 @@
     android:orientation="vertical"
     tools:context=".ui.activity.ViewPager2Activity">
 
-
-    <include layout="@layout/toolbar" android:id="@+id/layout_toolbar" />
-
+    <include
+        android:id="@+id/layout_toolbar"
+        layout="@layout/toolbar" />
 
     <FrameLayout
         android:id="@+id/layout_fragment"
