--- a/app/src/main/res/layout/appbar_main.xml
+++ b/app/src/main/res/layout/appbar_main.xml
@@ -11,7 +11,8 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar_layout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_224"
+        android:layout_height="@dimen/dp_210"
+        android:orientation="vertical"
         android:theme="@style/AppTheme.AppBarOverlay"
         app:elevation="@dimen/dp_2">
 
@@ -19,20 +20,22 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_tool_bar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:contentScrim="@color/colorAccent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
+            app:statusBarScrim="@color/trans"
             app:toolbarId="@id/toolbar">
-
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/iv_appbar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0.3"
+                app:layout_collapseParallaxMultiplier="0.7"
                 app:srcCompat="@drawable/materialdesign_introduction" />
+
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
