--- a/lib_resource/src/main/res/values/style.xml
+++ b/lib_resource/src/main/res/values/style.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="YzqAppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="YzqAppTheme" parent="Theme.MaterialComponents.DayNight.Bridge">
         <!-- Customize your theme here. -->
 
         <item name="colorPrimary">@color/red_700</item>
@@ -13,12 +13,13 @@
         <item name="android:divider">@color/black_alpha_16</item>
         <item name="colorControlHighlight">@color/black_alpha_16</item>
         <item name="android:textSize">@dimen/sp_14</item>
-        <item name="android:windowBackground">@color/bg_gray</item>
         <item name="android:screenOrientation">portrait</item>
         <item name="android:configChanges">screenSize|keyboardHidden|orientation</item>
         <item name="android:windowSoftInputMode">adjustPan|stateHidden</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="textInputStyle">@style/Widget.MaterialComponents.TextInputLayout.FilledBox
+        </item>
 
 
     </style>
@@ -26,7 +27,7 @@
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar" />
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.MaterialComponents.Light" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.MaterialComponents.Dark" />
 
 
     <!--toolbar样式-->
@@ -63,9 +64,7 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@color/colorAccent</item>
 
-
     </style>
-
 
     <!--outline button-->
     <style name="OutlineButton" parent="Widget.MaterialComponents.Button.OutlinedButton" />
