--- a/common/src/main/res/values/styles.xml
+++ b/common/src/main/res/values/styles.xml
@@ -17,7 +17,7 @@
         <item name="android:configChanges">screenSize|keyboardHidden|orientation</item>
         <item name="android:windowSoftInputMode">adjustPan|stateHidden</item>
         <!--Material Dialog 圆角弧度-->
-        <item name="md_corner_radius">4dp</item>
+        <item name="md_corner_radius">@dimen/radius</item>
 
 
     </style>
