--- a/lib_resource/src/main/res/values/style.xml
+++ b/lib_resource/src/main/res/values/style.xml
@@ -18,6 +18,7 @@
         <item name="android:windowSoftInputMode">adjustPan|stateHidden</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <!--不加这个Material Dialog 输入框会有个背景色-->
         <item name="textInputStyle">@style/Widget.MaterialComponents.TextInputLayout.FilledBox
         </item>
 
