更新主题配置  code review

--- a/app/src/main/res/drawable/tag_bg.xml
+++ b/app/src/main/res/drawable/tag_bg.xml
@@ -5,7 +5,7 @@
     <solid android:color="@color/trans" />
     <stroke
         android:width="@dimen/dp_1"
-        android:color="@color/colorAccent" />
+        android:color="@color/colorOnPrimary" />
     <corners android:radius="@dimen/dp_4" />
 
 
