--- a/lib_widget/src/main/res/layout/tablayout.xml
+++ b/lib_widget/src/main/res/layout/tablayout.xml
@@ -4,7 +4,7 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
-        style="@style/TabLayout"
+        style="@style/Theme.AppTheme.TabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
