--- a/app/src/main/res/layout/activity_drop_down_menu.xml
+++ b/app/src/main/res/layout/activity_drop_down_menu.xml
@@ -21,7 +21,7 @@
         app:menuSelectedIcon="@drawable/ic_arrow_up"
         app:menuTextSize="@dimen/sp_14"
         app:menuUnselectedIcon="@drawable/ic_arrow_down"
-        app:textSelectedColor="@color/colorAccent"
+        app:textSelectedColor="@color/colorOnPrimary"
         app:textUnselectedColor="@color/black" />
 
 
