--- a/app/src/main/res/layout/appbar_main.xml
+++ b/app/src/main/res/layout/appbar_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_210"
         android:orientation="vertical"
-        android:theme="@style/AppTheme.AppBarOverlay"
+        android:theme="@style/Theme.AppTheme.AppBarOverlay"
         app:elevation="@dimen/dp_2">
 
 
