--- a/lib_resource/src/main/res/drawable/linear_gradient_color.xml
+++ b/lib_resource/src/main/res/drawable/linear_gradient_color.xml
@@ -2,8 +2,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="45"
-        android:centerColor="@color/colorAccent"
         android:endColor="@color/colorPrimary"
-        android:startColor="@color/colorPrimaryDark"
+        android:startColor="@color/colorAccent"
         android:type="linear" />
 </shape>
