--- a/lib_widget/src/main/res/values/attr.xml
+++ b/lib_widget/src/main/res/values/attr.xml
@@ -30,7 +30,7 @@
     </declare-styleable>
 
 
-    <!--HorizontalEditView 自定义属性-->
+    <!--StateView 自定义属性-->
     <declare-styleable name="StateView">
 
         <attr name="no_data_img_res" format="reference" />
