完善HorizontalEditView和HorizontalTextView 着色器设置

--- a/lib_resource/src/main/res/values/themes.xml
+++ b/lib_resource/src/main/res/values/themes.xml
@@ -3,7 +3,7 @@
     <style name="Theme.XeonYuTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorAccent">@color/colorPrimary</item>
+        <item name="colorAccent">@color/colorAccent</item>
         <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
