--- a/app/src/main/res/layout/activity_view_binding.xml
+++ b/app/src/main/res/layout/activity_view_binding.xml
@@ -1,17 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.activity.ViewBindingActivity">
 
-    <include layout="@layout/toolbar" android:id="@+id/layout_toolbar"/>
+    <include
+        android:id="@+id/layout_toolbar"
+        layout="@layout/toolbar" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_click"
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="click" />
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/dp_10"
+        android:orientation="vertical">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_click"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/click" />
+
+
+        <com.yzq.lib_widget.HorizontalEditView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:horz_edit_endIcon="@drawable/ic_camera"
+            app:horz_edit_end_icon_tint="@color/blue_gray_300"
+            app:horz_edit_icon="@drawable/ic_add"
+            app:horz_edit_icon_tint="@color/red_600"
+            app:horz_edit_title="标题" />
+
+        <com.yzq.lib_widget.HorizontalTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:horz_tv_endIcon="@drawable/ic_menu_manage"
+            app:horz_tv_icon="@drawable/ic_map"
+            app:horz_tv_icon_tint="@color/green_700"
+            app:horz_tv_title="标题" />
+
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
 
 </androidx.appcompat.widget.LinearLayoutCompat>
