--- a/lib_widget/src/main/res/layout/view_horizontal_edit_layout.xml
+++ b/lib_widget/src/main/res/layout/view_horizontal_edit_layout.xml
@@ -12,10 +12,11 @@
         android:id="@+id/icon_start"
         android:layout_width="@dimen/dp_20"
         android:layout_height="@dimen/dp_20"
+        android:scaleType="centerCrop"
+        android:tint="@color/primary_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/primary_icon" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -47,14 +48,13 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/icon_end"
-        android:layout_width="@dimen/dp_24"
-        android:layout_height="wrap_content"
-        android:paddingStart="@dimen/dp_10"
-        android:paddingEnd="@dimen/dp_0"
+        android:layout_width="@dimen/dp_20"
+        android:layout_height="@dimen/dp_20"
+        android:scaleType="centerCrop"
+        android:tint="@color/primary_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/secondary_icon" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
