--- a/app/src/main/res/layout/item_img_list.xml
+++ b/app/src/main/res/layout/item_img_list.xml
@@ -4,6 +4,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/dp_1"
-    android:scaleType="centerCrop"
-    />
+    android:scaleType="centerCrop" />
 
