--- a/lib_resource/src/main/res/anim/left_out.xml
+++ b/lib_resource/src/main/res/anim/left_out.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2015 [1076559197@qq.com | tchen0707@gmail.com]
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License”);
@@ -14,8 +13,7 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<translate
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<translate xmlns:android="http://schemas.android.com/apk/res/android"
     android:duration="300"
     android:fromXDelta="0"
-    android:toXDelta="-100%p"/>
+    android:toXDelta="-100%p" />
