--- a/lib_resource/src/main/res/anim/top_in.xml
+++ b/lib_resource/src/main/res/anim/top_in.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<translate
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<translate xmlns:android="http://schemas.android.com/apk/res/android"
     android:duration="300"
     android:fromYDelta="-150%p"
-    android:toYDelta="0"/>
+    android:toYDelta="0" />
