--- a/lib_widget/src/main/res/drawable/ic_arrow_up.xml
+++ b/lib_widget/src/main/res/drawable/ic_arrow_up.xml
@@ -1,4 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="1024"
-    android:viewportWidth="1024" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M236.5,625.5l274.26,-274.26 274.26,274.26z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="1024"
+    android:viewportHeight="1024">
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M236.5,625.5l274.26,-274.26 274.26,274.26z" />
 </vector>
