update bsdiff demo

--- a/app/src/main/res/layout/activity_bs_diff.xml
+++ b/app/src/main/res/layout/activity_bs_diff.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.activity.BsDiffActivity">
+
+    <include
+        android:id="@+id/layout_toolbar"
+        layout="@layout/toolbar" />
 
 
     <com.google.android.material.button.MaterialButton
@@ -18,5 +23,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/combine_diff_file" />
+
+
+    <!--MD5-->
+    <com.yzq.lib_widget.HorizontalTextView
+        android:id="@+id/htv_new_file_md5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:horz_tv_title="新包MD5" />
+
+    <!--MD5-->
+    <com.yzq.lib_widget.HorizontalTextView
+        android:id="@+id/htv_combine_file_md5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:horz_tv_title="合成包MD5" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
