feat  add SplashActivity 优化启动视觉效果
#branch=kotlin_common_mvvm

--- a/lib_resource/src/main/res/values/themes.xml
+++ b/lib_resource/src/main/res/values/themes.xml
@@ -27,11 +27,23 @@
     </style>
 
 
-    <style name="SplashTheme" parent="Theme.XeonYuTheme">
-        <item name="android:windowIsTranslucent">true</item>
-        <item name="android:windowTranslucentStatus">true</item>
-        <item name="android:windowDisablePreview">true</item>
+    <!--启动页主题  视觉上优化启动速度-->
+    <style name="SplashTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowBackground">@drawable/splash_layer_list</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
+    <!--透明无标题-->
+    <style name="TransparentNoTitleTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowAnimationStyle">@null</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
 
 </resources>
