update code review

--- a/lib_widget/src/main/res/layout/toolbar.xml
+++ b/lib_widget/src/main/res/layout/toolbar.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/linear_gradient_color"
     android:theme="@style/Theme.AppTheme.AppBarOverlay">
 
-    <androidx.appcompat.widget.Toolbar
+    <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
