refactor BaseActivity 基类重构，删除冗余viewbingding以及databinding等基类

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
 
     <include
-        android:id="@+id/layout_main"
+        android:id="@+id/included_appbar_main"
         layout="@layout/appbar_main" />
 
 
