--- a/app/src/main/res/layout/activity_zxing.xml
+++ b/app/src/main/res/layout/activity_zxing.xml
@@ -6,7 +6,9 @@
     android:orientation="vertical"
     tools:context=".ui.activity.ZxingActivity">
 
-    <include layout="@layout/toolbar" />
+    <include
+        android:id="@+id/included_toolbar"
+        layout="@layout/toolbar" />
 
 
     <androidx.appcompat.widget.AppCompatTextView
