--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.activity.TaskActivity">
 
     <include
-        android:id="@+id/layout_toolbar"
+        android:id="@+id/included_toolbar"
         layout="@layout/toolbar" />
 
 
