--- a/app/src/main/res/layout/activity_binding_delegate.xml
+++ b/app/src/main/res/layout/activity_binding_delegate.xml
@@ -14,6 +14,7 @@
         android:id="@+id/btn_test"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dp_16"
         android:text="@string/test" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
