--- a/app/src/main/res/layout/activity_bs_diff.xml
+++ b/app/src/main/res/layout/activity_bs_diff.xml
@@ -16,12 +16,16 @@
         android:id="@+id/btn_file_diff"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_16"
+        android:layout_marginEnd="@dimen/dp_16"
         android:text="@string/generate_diff_file" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_file_combine"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_16"
+        android:layout_marginEnd="@dimen/dp_16"
         android:text="@string/combine_diff_file" />
 
 
