--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,7 +42,10 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/dp_10"
+            android:layout_marginStart="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginEnd="@dimen/dp_10"
+            android:minHeight="@dimen/dp_72"
             app:endIconMode="clear_text"
             app:errorEnabled="@{account.trim().length()==0}">
 
@@ -62,7 +65,9 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/dp_10"
+            android:layout_marginStart="@dimen/dp_10"
+            android:layout_marginEnd="@dimen/dp_10"
+            android:minHeight="@dimen/dp_72"
             app:endIconMode="password_toggle"
             app:errorEnabled="@{pwd.trim().length()==0}">
 
@@ -83,6 +88,14 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/dp_10"
             android:text="@string/login" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_clear_mmkv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp_10"
+            android:text="@string/mmkv"
+            app:backgroundTint="@color/red_600" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
